Bug 1124126 - Retry database connection for the case of corrupted permissions.sqlite. r=bsmedberg